assets/css/style.css
body {
    margin: 0;
    padding: 0;
    border: 0;
    width: 100%;
    position: relative;
    min-height: 100vh;
}
/*--------------- coloring ---*/ 
.navbar {
    background-color: rgba(95,155,245, 0.7);
}

section {
    background-color: #f5fefd;
}
footer {
    background-color: rgba(95,155,245, 0.7);
}
/*---------------------- navbar -----*/
.nav-logo {
    width: 100px;
    height: 100px;
    border-radius: 50px;
}

.nav-logo-container {
    padding-right: 15px;
}

.navbar a {
    font-family: "Mukta", sans-serif;
    font-weight: 900;
    font-size: 25pt;
    letter-spacing: 2pt;
}
/*-------- hero images --------*/
.container-fluid {
    padding: 0;
}

.hero-container {
    width: 100%;
}

.hero-img {
    height: auto;
    width: 100%;
    margin-bottom: 15px;
}

/*----------general --------*/
.who-what-head {
    text-align: center;
    margin-top: 20px;
}
.who-what-head h3 {
    align-items: center;
}

.who-what-text {
    margin-top: 20px;
    text-align: center;
    font-family: "Mukta", sans-serif; 
}
.area-head {
    font-family: "Mukta", sans-serif; 
    font-weight: 400;
}

/*---------map-------*/
.flex-container {
    display: flex;
    justify-content: center;
    align-items: baseline;
}
.custom-map {
    width: 300px;
    height: 300px;
    margin-bottom: 150px;
}

/*---------button-------*/
.btn,
.btn a {
    font-family: "Mukta", sans-serif;
}
.help-call {
    text-decoration: none;
    color: white;
}
/*----------footer--------*/
footer {
    height: 110px;
    width: 100%;
    position: absolute;
    bottom: 0;
}
.floater {
    float: left;
}
footer h5{
    padding-top: 40px;
    margin-left: 20px;
    text-align: center;
}
footer .nav-logo {
    margin-top: 5px;
}

/*---------testimonials-------*/
.testes {
    text-align: left;
}
.testes h3 {
    font-size: 22px;
    padding-left: 12px;
}
.testes h4 {
    font-size: 20px;
    padding-left: 12px;
}
.testes p {
    font-size: 16px;
    text-align: left;
    padding: 12px;
}

/*-------contact form-----*/
form {
    text-align: center;
}

